--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ pandas==2.2.2
 numpy==1.25.2
 tensorflow==2.7.0
 scikit-learn==1.5.2
-transformers==4.20.1
+transformers==4.18.0
 tokenizers==0.11.6
 # jupyter==1.1.1
 protobuf==3.20.3
 sentencepiece==0.2.0
 werkzeug==2.0.3
 Flask
+mock
